# so-magic

./: .coveragerc  .gitignore  .pylintrc  .readthedocs.yml  .scrutinizer.yml  .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  appveyor.yml  bandit.yml  setup.cfg  setup.py  tox-dev.ini  tox.ini
.appveyor/: appveyor-bootstrap.py  appveyor-download.py
.circleci/: config.yml
docs/: conf.py  index.rst  intendent_audience.rst  modules.rst  so_magic.clustering.rst  so_magic.data.backend.panda_handling.rst  so_magic.data.backend.rst  so_magic.data.datapoints.rst  so_magic.data.features.rst  so_magic.data.rst  so_magic.data.variables.rst  so_magic.rst  so_magic.som.rst  so_magic.utils.rst  spelling_wordlist.txt  why_this_library.rst
docs/source/: conf.py  index.rst
docs/usage/: installation.rst  quickstart.rst
docs/utils/: commands.rst  linear_mapping.rst  mediator.rst  memoize.rst  notification.rst  registry.rst  singleton.rst  transformations.rst
requirements/: base.txt  dev.txt  rtd.txt  somoclu.txt
scripts/: expand_json.py  initialize_sphinx.py  install_anaconda.sh  integration-test.sh  integration_test.py  parse_package_version.py
src/green_magic/: __init__.py  commands_manager.py  definitions.py  features.py  helpers.py  labeling.py  map_maker.py  so_master.py  strain_dataset.py  strainmaster.py  utils.py
src/green_magic/clustering/: __init__.py  cluster.py  cluster_evaluation.py  clustering.py  computing.py  extrinsic_evaluation.py  factory.py  helpers.py  kernel_determination.py
src/so_magic/: __init__.py  logging.conf  so_master.py
src/so_magic/data/: dataset.py  (+16 more)
tests/: conftest.py  data_test.py  sample-strains.jl  strainmaster_test.py  test_clustering.py  test_command_registration.py  test_commands.py  test_data_manager.py  test_datapoints.py  test_datapoints_manager.py  test_dataset.py  test_decorating.py  test_delegate.py  test_discretization.py  test_encoding.py  test_interfaces.py  test_magic_decorator.py  test_mediator.py  test_notification.py  test_phi.py  test_singleton.py  test_so_magic.py  test_som_factory.py  test_som_manager.py  test_tabular_operators.py  test_transformations.py  test_types.py
tests/dts/: sample-strains-colapsed.jl  test-clean.pk  unittest-dataset-clean.pk
tests/fixtures/: datapoint_files.py
tests/test_utils/: test_linear_transformation.py  test_memoize.py  test_registry.py  test_subclass_registry.py  test_transformations.py
(+126 files in other folders)
