[metadata]
name = so_magic
description = My package description
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = unsupervised learning, self-organizing map
license = GNU GPLv3

[options]
url = https://github.com/boromir674/so-magic
author = Konstantinos Lampridis
author_email = boromir674@hotmail.com
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
tests_require = pytest
install_requires =
    somoclu

[options.packages.find]
where=src
;exclude =
;    src.subpackage1
;    src.subpackage2

;[options.package_data]
;* = *.txt, *.rst
;hello = *.msg
;
;[options.extras_require]
;pdf = ReportLab>=1.2; RXP
;rest = docutils>=0.3; pack ==1.1, ==1.3


;[options.data_files]
;/etc/my_package =
;    site.d/00_default.conf
;    host.d/00_default.conf
;data = data/img/logo.png, data/svg/icon.svg


#### SUPORT TOOLS CONFIG
[flake8]
max_line_length = 100
exclude = .tox,venv

[tools:pytest]
python_files = tests/test_*.py tests/* */test_*.py

[isort]
line_length = 100
skip = .tox,venv,src/so_magic/__init__
default_section = THIRDPARTY
known_first_party = src,tests

[semantic_release]
version_variable = src/so_magic/__init__.py:__version__

[check-manifest]
ignore =
    .travis.yml
    .DS_Store
    scripts/*.py
    .bettercodehub.yml
    .scrutinizer.yml
