[metadata]
description = Self Organising MAp Graceful InterfaCe
long_description = file: README.rst
keywords = unsupervised learning, self-organizing map
license = GNU GPLv3

[options]
url = https://github.com/boromir674/so-magic
author = Konstantinos Lampridis
author_email = boromir674@hotmail.com
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
tests_require = pytest
install_requires =
    attrs
    numpy
    pandas
    sklearn
    somoclu

[options.packages.find]
where=src

#### SUPORT TOOLS CONFIG
[flake8]
max_line_length = 100
exclude = .tox,venv

[tools:pytest]
python_files = tests/test_*.py tests/* */test_*.py

[isort]
line_length = 100
skip = .tox,venv,src/so_magic/__init__
default_section = THIRDPARTY
known_first_party = src,tests

[semantic_release]
version_variable = src/so_magic/__init__.py:__version__

[check-manifest]
ignore =
    .travis.yml
    .DS_Store
    scripts/*.py
    .bettercodehub.yml
    .scrutinizer.yml
